Name:                    py2cuda
Version:                 1.0
Synopsis:                Python to CUDA C++ translator
Homepage:                https://github.com/oulgen/CudaPy

License:                 MIT
License-file:            LICENSE

Author:                  Josh Acay,
                         Oguz Ulgen
Maintainer:              Josh Acay <cacay@cmu.edu>,
                         Oguz Ulgen <oulgen@cmu.edu>
Category:                Language

Build-type:              Simple
Cabal-version:           >=1.10

library
  hs-source-dirs:        src

  default-language:      Haskell2010

  exposed-modules:       Translate

  other-modules:         AST.AST
                         AST.Operations
                         AST.Types
                         Translation.Constants
                         Translation.Library
                         Translation.Translate
                         Translation.TypeInference
                         Translation.Variables
                         Util.Error

  build-depends:         base >= 4.6,
                         mtl == 2.1.*,
                         transformers >= 0.2,
                         containers == 0.5.*,
                         pretty == 1.1.3.*,
                         language-python == 0.5.*

  default-extensions:    NamedFieldPuns,
                         PatternGuards,
                         ScopedTypeVariables,
                         ForeignFunctionInterface

  c-sources:             cbits/module_init.c

  -- ld-options: static pthread

  ghc-options: -O2
               -fwarn-incomplete-patterns
               -fwarn-unused-imports
               -fwarn-warnings-deprecations

  extra-libraries:       HSrts-ghc7.8.3 -- Update this to your version of GHC
